k8s/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  namespace: microservices
  annotations:
    meta.helm.sh/release-name: microservices-k8s
    meta.helm.sh/release-namespace: microservices
  labels:
    app.kubernetes.io/managed-by: Helm
    app: admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      annotations:
        meta.helm.sh/release-name: microservices-k8s
        meta.helm.sh/release-namespace: microservices
      labels:
        app.kubernetes.io/managed-by: Helm
        app: admin
    spec:
      containers:
      - name: admin
        image: 70131370/admin:1.0.0-SNAPSHOT
        imagePullPolicy: Always
        ports:
          - name: http-port
            containerPort: 8080
