k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: microservices
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: gateway:1.0.0-SNAPSHOT
        ports:
          - name: http-port
            containerPort: 8080
        securityContext:
          runAsRoot: true
          readOnlyRootFilesystem: false
          capabilities: { }
          privileged: true
          allowPrivilegeEscalation: true
