k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: microservices
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: admin
