k8s/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: microservices
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
  selector:
    app: registry
