k8s/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-gateway
  namespace: microservices
  annotations:
    meta.helm.sh/release-name: microservices-k8s
    meta.helm.sh/release-namespace: microservices
    cert-manager.io/issuer: microservices-letsencrypt
    cert-manager.io/issuer-kind: Issuer
    cert-manager.io/issuer-name: microservices-letsencrypt
  labels:
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
  - host: microservices.michibaum.ch
    http:
      paths:
      - backend:
          service:
            port:
              number: 8080
            name: gateway
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - microservices.michibaum.ch
    secretName: microservices.michibaum.ch
